Ajustes para despliegue en Render: runtime.txt, versiones específicas en requirements.txt

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: starter
     buildCommand: "pip install -r backend/requirements.txt && python backend/preinstall_models.py"
     startCommand: "python backend/run.py"
+    runtime: python3.12
     envVars:
       - key: ENVIRONMENT
         value: production
