--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-git+https://github.com/openai/whisper.git@v20231117
+openai-whisper==20231117
 torch==2.0.1
 torchaudio==2.0.2
 python-dotenv==1.0.0
 pydantic==2.5.0
 aiofiles==23.2.0
-setuptools<81.0.0  
+setuptools<81.0.0
